# folio-user-bulk-edit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  precious.toml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
src/folio_user_bulk_edit/: cli.py
src/folio_user_bulk_edit/commands/: check.py  user_import.py
src/folio_user_import_manager/: __init__.py  __main__.py  _cli_log.py  cli.py  data.py  folio.py  schemas.py
src/folio_user_import_manager/commands/: check.py  user_import.py
src/folio_user_import_manager/commands/check/: __init__.py  _data.py  _folio.py  _models.py  _schema.py
src/folio_user_import_manager/commands/user_import/: __init__.py  _models.py
tests/: test_cli.py
tests/cli/: test_args.py  test_paths.py
tests/commands/: test_check.py
tests/commands/check/: test_data.py  test_folio.py
tests/commands/check/samples/: ok_addresses.csv  ok_custom.csv  ok_dates.csv  ok_id.csv  schema_duplicate_departments.csv  schema_duplicate_id.csv  schema_invalid_custom.csv  schema_invalid_email.csv  schema_invalid_email_preferences.csv  schema_invalid_profile.csv  schema_malformed_id.csv  schema_null_personal.csv  schema_null_requestPreference.csv  schema_req_column_name.csv  schema_req_personal.csv  schema_req_requestPreference.csv  schema_zero_id.csv  schema_zero_requestPreference_id.csv  schema_zero_service_point.csv
tests/commands/user_import/: test_behavior.py  test_transformations.py
tests/commands/user_import/samples/: ok_address.csv  ok_addresses.csv  ok_custom.csv  ok_custom.json  ok_dates.csv  (+7 more)
