[project]
name = "folio-user-import-manager"
version = "0.1.0"
description = "Initiates, monitors, and reports on mod-user-import operations in FOLIO."
authors = [
    {name = "Katherine Bargar", email = "kbargar@fivecolleges.edu"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
lint = [
    "ruff>=0.9.10",
]
test = [
    "pytest>=8.3.5",
    "pytest-cases>=3.8.6",
]

[tool.pdm.scripts]
test = "python -m pytest -vv"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
target-version = "py313"
[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["ANN401", "D105", "FIX002", "PLR2004", "TD002", "TD003", "COM812"]
pydocstyle.convention = "google"
[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D", "INP001", "N813", "S101"]

[tool.pyright]
typeCheckingMode = "basic"
